--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:http://184.72.66.246:9000/</sonar.host.url>
+		<sonar.host.url>http://54.226.162.71:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -102,7 +102,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.147.34.138:8081/repository/paypal_snapshot2/</url>
+	      <url>http://34.235.151.126:8081/repository/paypal_snapshot2/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
